<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context=".ui.neighbour_list.ProfileFragment">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/activity_profile_name"
        android:textSize="32sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profile_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:backgroundTint="@color/wht_background"
        android:clickable="true"
        android:src="@drawable/ic_star_border_white_24dp"
        app:backgroundTint="#9A000000"
        app:layout_constraintBottom_toTopOf="@id/profile_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture" />

    <android.support.v7.widget.CardView
        android:id="@+id/profile_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/info_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/activity_profile_name"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_cadre" />

            <TextView
                android:id="@+id/info_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/appbar_padding_top"
                android:text="@string/activity_profile_location"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_location_24dp"
                android:layout_marginStart="@dimen/text_margin"
                android:drawablePadding="@dimen/text_margin"
                android:drawableTint="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@id/info_tel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/appbar_padding_top"
                android:text="@string/activity_profile_tel"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:layout_marginStart="16dp"
                android:drawablePadding="16dp"
                app:layout_constraintBottom_toTopOf="@id/info_fb"
                app:layout_constraintTop_toBottomOf="@id/info_location" />

            <TextView
                android:id="@+id/info_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/appbar_padding_top"
                android:text="@string/activity_profile_fb"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_web_24"
                android:layout_marginStart="16dp"
                android:drawablePadding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_tel" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/profile_describe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/info_describe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/activity_profile_describe"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_cadre" />

            <ScrollView
                android:id="@+id/textAreaScroller"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_x="0dp"
                android:layout_y="25dp"
                android:scrollbars="vertical">
                <TextView
                    android:id="@+id/describe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/text_margin"
                    android:text="@string/activity_describe"
                    android:textSize="16sp" />
            </ScrollView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>